@startuml

title __RENDERER's Class Diagram__\n

  namespace net.mcbedev.kancolle {
    namespace client {
      namespace renderer {
        class net.mcbedev.kancolle.client.renderer.ShimakazeRenderer {
            + ShimakazeRenderer()
        }
      }
    }
  }
  

  namespace net.mcbedev.kancolle {
    namespace client {
      namespace renderer {
        class net.mcbedev.kancolle.client.renderer.TorpedoRenderer {
            + TorpedoRenderer()
        }
      }
    }
  }
  

  net.mcbedev.kancolle.client.renderer.ShimakazeRenderer -up-|> software.bernie.geckolib3.renderers.geo.GeoEntityRenderer
  net.mcbedev.kancolle.client.renderer.TorpedoRenderer -up-|> software.bernie.geckolib3.renderers.geo.GeoEntityRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
